--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "/Users/jmazz/.vim/bundle/Vundle.vim"]
-	path = /Users/jmazz/.vim/bundle/Vundle.vim
+[submodule "~/.vim/bundle/Vundle.vim"]
+	path = ~/.vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
