update tmux and some associated aliases

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,11 @@ setw -g mode-keys vi
 
 set -g default-terminal "screen-256color"
 
+# Restore environment on tmux server start
+set -g @continuum-restore 'on'
+# set -g @continuum-boot 'on'
+# set -g @continuum-boot-options 'iterm'
+
 # Mouse Mode
 setw -g mouse on
 # to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
@@ -41,12 +46,23 @@ set-option -g status-bg default
 set-option -g status-fg colour8
 # set -g window-status-current-bg white
 set -g window-status-current-fg green
+set -g window-status-current-bg colour0
+# setw -g window-status-format '#[fg=colour7,bg=colour8] #W '
+setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
+setw -g window-status-current-format '#[fg=colour7,bg=colour1] #W '
+# set -g window-status-format " #I:#W "
+# set -g window-status-current-format " #I:#W "
+# setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+# setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
 # set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 # set-option -g status-left '#S#[default] ⡇ '
 # set-option -g status-right '%H:%M %b %d'
 # set-option -g status-right '#(ifstat -i en0 -z -q 1 1 | tail -n 1) %H:%M %b %d'
-set-option -g status-left '#S '
-set-option -g status-right '#(netspeeds) %H:%M %b %d'
+# set-option -g status-left '#S '
+set-option -g status-left ''
+# set-option -g status-right '#(netspeeds) %H:%M #[fg=colour0,bg=colour1] 🐳  #[fg=colour0,bg=colour7] 0 #[default] %b %d'
+# set-option -g status-right '#(netspeeds) %H:%M %b %d'
+set-option -g status-right '#(~/bin/tmux_right)'
 # set -g status-right "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2)#[default]"
 set-option -g status-right-length 60
 set-option -g status-left-length 60
@@ -77,7 +93,7 @@ bind r source-file ~/.tmux.conf
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # TMUX Plugin Manager
 run '~/.tmux/plugins/tpm/tpm'
