hide tmux status right

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,8 @@ setw -g window-status-current-format '#[fg=colour7,bg=colour1] #W '
 set-option -g status-left ''
 # set-option -g status-right '#(netspeeds) %H:%M #[fg=colour0,bg=colour1] 🐳  #[fg=colour0,bg=colour7] 0 #[default] %b %d'
 # set-option -g status-right '#(netspeeds) %H:%M %b %d'
-set-option -g status-right '#(~/bin/tmux_right)'
+# set-option -g status-right '#(~/bin/tmux_right)'
+set-option -g status-right ''
 # set -g status-right "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2)#[default]"
 set-option -g status-right-length 60
 set-option -g status-left-length 60
