--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,72 +1,31 @@
-# Set prefix to C-a
+# Prefix
 unbind C-b
 set-option -g prefix C-a
 
+# Options
+setw -g mouse
 setw -g mode-keys vi
-
+set-option -g set-titles on
+set -g base-index 1
 set -g default-terminal "screen-256color"
+set-option -g default-shell $SHELL
+set -sg escape-time 0 # No delay for escape key press
+if-shell "test -f /usr/local/bin/reattach-to-user-namespace" 'set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l ${SHELL} || ${SHELL}"'
 
-# Restore environment on tmux server start
-set -g @continuum-restore 'on'
+# Plugin Options
+set -g @continuum-restore 'on' # Restore environment on tmux server start
 # set -g @continuum-boot 'on'
 # set -g @continuum-boot-options 'iterm'
-
-# Mouse Mode
-setw -g mouse on
-# to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
-
-set-option -g default-shell $SHELL
-set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l ${SHELL} || ${SHELL}"
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# Mouse copy
-# bind-key -t vi-copy mousedragend1pane copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy MouseUp1Pane copy-pipe "reattach-to-user-namespace pbcopy"
-# bind-key -t vi-copy y copy-pipe "pbcopy"
-
-# Start counting windows from 1
-set -g base-index 1
-
-bind -n C-h previous-window
-bind -n C-l next-window
 
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
 
-# Swap windows
+# Bindings
+bind -n C-h previous-window
+bind -n C-l next-window
+
 bind-key < swap-window -t :-
 bind-key > swap-window -t :+
-
-# Status bar
-set -g status-interval 2
-set-option -g status-bg default
-set-option -g status-fg colour8
-# set -g window-status-current-bg white
-set -g window-status-current-fg green
-set -g window-status-current-bg colour0
-# setw -g window-status-format '#[fg=colour7,bg=colour8] #W '
-setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
-setw -g window-status-current-format '#[fg=colour7,bg=colour1] #W '
-# set -g window-status-format " #I:#W "
-# set -g window-status-current-format " #I:#W "
-# setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-# setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-# set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
-# set-option -g status-left '#S#[default] ⡇ '
-# set-option -g status-right '%H:%M %b %d'
-# set-option -g status-right '#(ifstat -i en0 -z -q 1 1 | tail -n 1) %H:%M %b %d'
-# set-option -g status-left '#S '
-set-option -g status-left ''
-# set-option -g status-right '#(netspeeds) %H:%M #[fg=colour0,bg=colour1] 🐳  #[fg=colour0,bg=colour7] 0 #[default] %b %d'
-# set-option -g status-right '#(netspeeds) %H:%M %b %d'
-# set-option -g status-right '#(~/bin/tmux_right)'
-set-option -g status-right ''
-# set -g status-right "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2)#[default]"
-set-option -g status-right-length 60
-set-option -g status-left-length 60
 
 # Split bindings. Like :s and :vs from vim
 # bind-key v split-window -h # %
@@ -86,11 +45,39 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-# No delay for escape key press
-set -sg escape-time 0
-
-# Reload tmux config
 bind r source-file ~/.tmux.conf
+
+# to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+
+bind-key -t vi-copy v begin-selection
+if-shell "test -f /usr/local/bin/reattach-to-user-namespace" 'bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
+# Mouse copy
+# bind-key -t vi-copy mousedragend1pane copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy MouseUp1Pane copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "pbcopy"
+
+
+# Status bar
+set -g status-interval 2
+
+set-option -g status-bg default
+set-option -g status-fg colour8
+
+setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
+
+# setw -g window-status-current-format '#[fg=colour7,bg=colour2] #W '
+setw -g window-status-current-format '#[fg=colour7,bg=colour1] #W '
+
+set-option -g status-left ''
+set-option -g status-right '#(~/bin/tmux_right)'
+# set-option -g status-right ''
+
+set-option -g status-right-length 60
+set-option -g status-left-length 60
+
+# set -g window-status-current-fg green
+# set -g window-status-current-bg colour0
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
