update tmux for 24bit colors, remove alt-hjkl pane navigation so it works in nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,15 @@
 # Prefix
 unbind C-b
 set-option -g prefix C-a
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Options
 setw -g mouse
 setw -g mode-keys vi
 set-option -g set-titles on
 set -g base-index 1
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-shell $SHELL
 set -sg escape-time 0 # No delay for escape key press
 if-shell "test -f /usr/local/bin/reattach-to-user-namespace" 'set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l ${SHELL} || ${SHELL}"'
@@ -39,11 +41,13 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind z set-option -g status
+
 # Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+# bind -n M-h select-pane -L
+# bind -n M-j select-pane -D
+# bind -n M-k select-pane -U
+# bind -n M-l select-pane -R
 
 bind r source-file ~/.tmux.conf
 
@@ -67,11 +71,12 @@ set-option -g status-fg colour8
 setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
 
 # setw -g window-status-current-format '#[fg=colour7,bg=colour2] #W '
-setw -g window-status-current-format '#[fg=colour7,bg=colour1] #W '
+# setw -g window-status-current-format '#[fg=colour0,bg=colour5] #W '
+setw -g window-status-current-format '#[fg=#E7E7D8,bg=#2D5C76] #W '
 
 set-option -g status-left ''
-set-option -g status-right '#(~/bin/tmux_right)'
-# set-option -g status-right ''
+# set-option -g status-right '#(~/bin/tmux_right)'
+set-option -g status-right ''
 
 set-option -g status-right-length 60
 set-option -g status-left-length 60
