updated init.vim, coordinate pane movement b/w tmux and nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,7 @@ set -g @continuum-restore 'on' # Restore environment on tmux server start
 
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
+set -g @resurrect-strategy-nvim 'session'
 
 # Bindings
 bind -n C-h previous-window
@@ -32,22 +33,25 @@ bind-key > swap-window -t :+
 # Split bindings. Like :s and :vs from vim
 # bind-key v split-window -h # %
 # bind-key s split-window -v # "
-bind s split-window -c "#{pane_current_path}"
+bind b split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind s choose-session
 
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind -n C-p last-window
+
 bind z set-option -g status
 
-# Use Alt-vim keys without prefix key to switch panes
-# bind -n M-h select-pane -L
-# bind -n M-j select-pane -D
-# bind -n M-k select-pane -U
-# bind -n M-l select-pane -R
+# Use (almost) Alt-vim keys without prefix key to switch panes
+bind -n M-y select-pane -L
+bind -n M-u select-pane -D
+bind -n M-i select-pane -U
+bind -n M-o select-pane -R
 
 bind r source-file ~/.tmux.conf
 
