add 'bind t  setw automatic-rename' to .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,7 @@ bind b split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 bind s choose-session
+bind t  setw automatic-rename
 
 bind h select-pane -L
 bind j select-pane -D
@@ -76,7 +77,8 @@ setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
 
 # setw -g window-status-current-format '#[fg=colour7,bg=colour2] #W '
 # setw -g window-status-current-format '#[fg=colour0,bg=colour5] #W '
-setw -g window-status-current-format '#[fg=#E7E7D8,bg=#2D5C76] #W '
+# setw -g window-status-current-format '#[fg=#E7E7D8,bg=#2D5C76] #W '
+setw -g window-status-current-format '#[fg=#E7E7D8,bg=#A15FA9] #W '
 
 set-option -g status-left ''
 # set-option -g status-right '#(~/bin/tmux_right)'
