--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,18 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind-key Z switch-client -T RESIZE
+
+bind-key -T RESIZE k resize-pane -U \; switch-client -T RESIZE
+bind-key -T RESIZE j resize-pane -D \; switch-client -T RESIZE
+bind-key -T RESIZE h resize-pane -L \; switch-client -T RESIZE
+bind-key -T RESIZE l resize-pane -R \; switch-client -T RESIZE
+
+bind-key -T RESIZE K resize-pane -U 5 \; switch-client -T RESIZE
+bind-key -T RESIZE J resize-pane -D 5 \; switch-client -T RESIZE
+bind-key -T RESIZE H resize-pane -L 5 \; switch-client -T RESIZE
+bind-key -T RESIZE L resize-pane -R 5 \; switch-client -T RESIZE
+
 bind -n C-p last-window
 
 bind z set-option -g status
