--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,7 +71,9 @@ bind r source-file ~/.tmux.conf
 # to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
-bind-key -t vi-copy v begin-selection
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+
 if-shell "test -f /usr/local/bin/reattach-to-user-namespace" 'bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
 # Mouse copy
 # bind-key -t vi-copy mousedragend1pane copy-pipe "reattach-to-user-namespace pbcopy"
