[tmux] change prefix if not on ssh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-# Prefix
-unbind C-b
-set-option -g prefix C-a
+# Change prefix if not on ssh
+if-shell 'test -z "$SSH_CLIENT"' 'unbind C-b; set-option -g prefix C-a'
+
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Options
