[tmux] set -g default-terminal to xterm-256color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ setw -g mouse
 setw -g mode-keys vi
 set-option -g set-titles on
 set -g base-index 1
-# set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-shell $SHELL
 set -sg escape-time 0 # No delay for escape key press
