[tmux] bind-key -n C-x send-keys C-b to use C-x as prefix over ssh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 # Change prefix if not on ssh
 if-shell 'test -z "$SSH_CLIENT"' 'unbind C-b; set-option -g prefix C-a'
 
+bind-key -n C-x send-keys C-b
+
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Options
