[tmux] handle ssh/local tab movements, colors, status update, tmux-mem-cpu-load

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,8 +26,11 @@ set -g @resurrect-restore 'R'
 set -g @resurrect-strategy-nvim 'session'
 
 # Bindings
-bind -n C-h previous-window
-bind -n C-l next-window
+# h/l on local, y/o on ssh
+if-shell 'test -z "$SSH_CLIENT"' 'bind -n C-h previous-window'
+if-shell 'test -z "$SSH_CLIENT"' 'bind -n C-l next-window'
+if-shell 'test -n "$SSH_CLIENT"' 'bind -n C-y previous-window'
+if-shell 'test -n "$SSH_CLIENT"' 'bind -n C-o next-window'
 
 bind-key < swap-window -t :-
 bind-key > swap-window -t :+
@@ -87,21 +90,22 @@ if-shell "test -f /usr/local/bin/reattach-to-user-namespace" 'bind-key -t vi-cop
 set -g status-interval 2
 
 set-option -g status-bg default
-set-option -g status-fg colour8
+set-option -g status-fg colour7
 
 setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
 
 # setw -g window-status-current-format '#[fg=colour7,bg=colour2] #W '
-# setw -g window-status-current-format '#[fg=colour0,bg=colour5] #W '
+setw -g window-status-current-format '#[fg=colour7,bg=colour4] #W '
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#2D5C76] #W '
-setw -g window-status-current-format '#[fg=#E7E7D8,bg=#A15FA9] #W '
+# setw -g window-status-current-format '#[fg=#E7E7D8,bg=#A15FA9] #W '
 
 set-option -g status-left ''
+set-option -g status-right '#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 0) #(~/bin/tmux_right)'
 # set-option -g status-right '#(~/bin/tmux_right)'
-set-option -g status-right ''
+# set-option -g status-right ''
 
-set-option -g status-right-length 60
-set-option -g status-left-length 60
+set-option -g status-right-length 120
+set-option -g status-left-length 40
 
 # set -g window-status-current-fg green
 # set -g window-status-current-bg colour0
@@ -109,6 +113,7 @@ set-option -g status-left-length 60
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # TMUX Plugin Manager
 run '~/.tmux/plugins/tpm/tpm'
