--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,6 +96,7 @@ setw -g window-status-format '#[fg=colour0,bg=colour7] #W '
 
 # setw -g window-status-current-format '#[fg=colour7,bg=colour2] #W '
 setw -g window-status-current-format '#[fg=colour7,bg=colour4] #W '
+if-shell 'test -z "$SSH_CLIENT"' '#[fg=colour7,bg=colour6] #W '
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#2D5C76] #W '
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#A15FA9] #W '
 
