--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,7 +70,7 @@ bind -n M-y select-pane -L
 bind -n M-u select-pane -D
 bind -n M-i select-pane -U
 bind -n M-o select-pane -R
-
+xbacklight
 bind r source-file ~/.tmux.conf
 
 # to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
@@ -78,6 +78,8 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+if-shell "test `uname` = Linux" 'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"'
+if-shell "test `uname` = Linux" 'bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"'
 
 if-shell "test -f /usr/local/bin/reattach-to-user-namespace" 'bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
 # Mouse copy
@@ -101,9 +103,9 @@ if-shell 'test -z "$SSH_CLIENT"' '#[fg=colour7,bg=colour6] #W '
 # setw -g window-status-current-format '#[fg=#E7E7D8,bg=#A15FA9] #W '
 
 set-option -g status-left ''
-set-option -g status-right '#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 0) #(~/bin/tmux_right)'
+# set-option -g status-right '#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 0) #(~/bin/tmux_right)'
 # set-option -g status-right '#(~/bin/tmux_right)'
-# set-option -g status-right ''
+set-option -g status-right ''
 
 set-option -g status-right-length 120
 set-option -g status-left-length 40
