--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -371,10 +371,10 @@ menu-0-2-exec = dm-tool switch-to-greeter
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = sudo shutdown -r now
+menu-1-1-exec = systemctl reboot
 
 menu-2-0 = power off
-menu-2-0-exec = sudo shutdown now
+menu-2-0-exec = systemctl poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
