[tmux] bring back tmux_right in status by default

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -104,8 +104,8 @@ if-shell 'test -z "$SSH_CLIENT"' '#[fg=colour7,bg=colour6] #W '
 
 set-option -g status-left ''
 # set-option -g status-right '#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 -a 0) #(~/bin/tmux_right)'
-# set-option -g status-right '#(~/bin/tmux_right)'
-set-option -g status-right ''
+set-option -g status-right '#(~/bin/tmux_right)'
+# set-option -g status-right ''
 
 set-option -g status-right-length 120
 set-option -g status-left-length 40
