--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -44,10 +44,11 @@ module-margin-left = 1
 module-margin-right = 2
 
 font-0 = fixed:pixelsize=11;2
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-1 = MaterialIcons:size=16;5
+font-2 = FontAwesome:size=16;4
+; font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-2 = icons-in-terminal:fontformat=truetype:size=8:antialias=false;0
-font-2 = MaterialIcons:size=16;5
-font-3 = siji:pixelsize=10;1
+; font-3 = siji:pixelsize=10;1
 
 modules-left = bspwm
 modules-center = xwindow
@@ -318,22 +319,22 @@ adapter = ADP1
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
 
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = " "
-format-full-underline = ${self.format-charging-underline}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 animation-charging-framerate = 750
 
 [module/temperature]
