[polybar] format-full-prefix for battery

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -323,7 +323,7 @@ format-charging = <animation-charging> <label-charging>
 
 format-discharging = <ramp-capacity> <label-discharging>
 
-format-full-prefix = " "
+format-full-prefix = " "
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
