--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -105,43 +105,43 @@ label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
 type = internal/bspwm
+enable-scroll = true
 
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
+; ws-icon-default = ○
+; format = <label-state><label-mode>
+
+label-focused = ●
 label-focused-underline = ${colors.primary}
 label-focused-padding = 2
 
-label-occupied = %index%
+label-occupied = ○
 label-occupied-padding = 2
 
-label-urgent = %index%!
+label-urgent = ○
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
-label-empty = %index%
+label-empty = ○
 label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2Q
-; enable-scroll = false
+label-empty-padding = 2
 
-; format = <label-state><label-mode>
 ; format-padding = 2
 ; format-background = #EAAFAF
 
 ; inline-mode = true
+;
+;label-monocle = 
+;label-tiled = 
+;label-fullscreen = 
+;label-floating = 
+;label-pseudotiled = P
+;label-locked = 
+;label-locked-foreground = #bd2c40
+;label-sticky = 
+;label-sticky-foreground = #fba922
+;label-private = 
+;label-private-foreground = #bd2c40
 
-; ws-icon-default = 
-
-; label-focused = 
-; label-focused-foreground = #000000
-
-; label-occupied = %icon%
-; label-occupied-foreground = #1B2443
-
-; label-urgent = %icon%
-; label-urgent-foreground = #31ABDE
-
-; label-empty = %icon%
-; label-empty-foreground = #FFFFFF
 
 [module/i3]
 type = internal/i3
